src/test/ui/const-generics/generic-sum-in-array-length.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/generic-sum-in-array-length.rs:7:53
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                                     ^ cannot perform const operation using `A`
   |
   = help: const parameters may only be used as standalone arguments `A`

error: generic parameters must not be used inside const evaluations
  --> $DIR/generic-sum-in-array-length.rs:7:57
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                                         ^ cannot perform const operation using `B`
   |
   = help: const parameters may only be used as standalone arguments `B`

error: aborting due to 2 previous errors

